feature1 branch commit

--- a/ego-code/ego-cart/pom.xml
+++ b/ego-code/ego-cart/pom.xml
@@ -5,6 +5,7 @@
     <artifactId>ego-parent</artifactId>
     <version>0.0.1-SNAPSHOT</version>
   </parent>
+  <!--哈哈哈哈-->
   <artifactId>ego-cart</artifactId>
   <packaging>war</packaging>
   <dependencies>
