--- a/ego-code/ego-cart/pom.xml
+++ b/ego-code/ego-cart/pom.xml
@@ -7,6 +7,7 @@
   </parent>
   <artifactId>ego-cart</artifactId>
   <packaging>war</packaging>
+  master分支上修改了
   <dependencies>
 	  <!--<dependencies>-->
 		<!-- ftpclient -->
