--- a/ego-code/ego-cart/pom.xml
+++ b/ego-code/ego-cart/pom.xml
@@ -8,6 +8,7 @@
   <artifactId>ego-cart</artifactId>
   <packaging>war</packaging>
   master分支上修改了
+  dev brach
   <packaging>war</packaging>
   <packaging>war</packaging>
   <dependencies>
